# ChangeLog for media-video/devede
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/devede/ChangeLog,v 1.31 2011/03/23 08:15:14 radhermit Exp $

  23 Mar 2011; Tim Harder <radhermit@gentoo.org> -devede-3.12c.ebuild,
  -devede-3.13.1.ebuild, -devede-3.14.0.ebuild, -devede-3.15.2.ebuild,
  -devede-3.16.6.ebuild, devede-3.16.9.ebuild:
  Remove old and use slot dep for gtk+.

  27 Feb 2011; Markos Chandras <hwoarang@gentoo.org> devede-3.16.9.ebuild:
  Stable on amd64 wrt bug #348320

  25 Feb 2011; Thomas Kahle <tomka@gentoo.org> devede-3.16.9.ebuild:
  x86 stable per bug 348320

*devede-3.16.9 (15 Dec 2010)

  15 Dec 2010; Luca Barbato <lu_zero@gentoo.org> +devede-3.16.9.ebuild:
  Version bump as requested by ago

  06 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  devede-3.12c.ebuild, devede-3.13.1.ebuild, devede-3.14.0.ebuild,
  devede-3.15.2.ebuild:
  Use PYTHON_DEPEND instead of NEED_PYTHON.

*devede-3.16.6 (20 Mar 2010)

  20 Mar 2010; Dror Levin <spatz@gentoo.org> -devede-3.6.ebuild,
  -devede-3.11b.ebuild, +devede-3.16.6.ebuild:
  Version bump, bug 304025. Updated usage of python eclass and also dep on
  >=pygtk-2.16. Remove old.

*devede-3.15.2 (07 Jan 2010)

  07 Jan 2010; Patrick Lauer <patrick@gentoo.org> +devede-3.15.2.ebuild:
  Bump for #299355

*devede-3.14.0 (01 Sep 2009)

  01 Sep 2009; Patrick Lauer <patrick@gentoo.org> +devede-3.14.0.ebuild:
  Bump to 3.14.0, fixes #283143

  25 Jul 2009; Samuli Suominen <ssuominen@gentoo.org> devede-3.13.1.ebuild:
  GTK+ 2.16 is required wrt #279075, thanks to Mauro Rizzato for reporting.

  02 Jul 2009; Markus Meier <maekke@gentoo.org> devede-3.12c.ebuild:
  amd64 stable, bug #273536

*devede-3.13.1 (28 Jun 2009)

  28 Jun 2009; Patrick Lauer <patrick@gentoo.org> +devede-3.13.1.ebuild:
  Bump to 3.13.1, fixes #275625

  17 Jun 2009; Christian Faulhammer <fauli@gentoo.org> devede-3.12c.ebuild:
  stable x86, bug 273536
