@@ -1,18 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 DIST devede-3.16.9.tar.bz2 2368434 RMD160 c3bf9b833d503f8d7606918d19a972f98c62e98f SHA1 6b871534a647bf5126e79f1b31394b85b7e66026 SHA256 eccaba86893935ff898e7b26d772214403362a6c8d729645778146560c1ac0c1
+DIST devede-3.17.0.tar.bz2 2370362 RMD160 52783a11b10a000109947e9ebc4347be599de680 SHA1 b9a9043b32289cd6a6dc7d3eeb1e7a094404621b SHA256 528acc83302aec65137f985f32a604cfb416122546827064f7ed54ebafcc4985
 EBUILD devede-3.16.9.ebuild 1482 RMD160 ce44201da40a287a24b6ad29fa9bbbe4ecf23a35 SHA1 f8101147b859e1c5c80e1560529633c6992e7b41 SHA256 5605d9e5f6e0fe78b79846660afdce8dfc7eb0c5c38065334a1004513eed4fed
-MISC ChangeLog 4630 RMD160 a75d25fd28717608d1206a655256046826904078 SHA1 acfbe286a72ddb89d54ee389011d7b96f0ffcfed SHA256 15d77d45d670577cdd241d3a3a27c7c4cb23c21f7b886ce41a216a1472528a1a
+EBUILD devede-3.17.0.ebuild 1486 RMD160 7e28e23bff78d935f6df6508342ff89dcd727f1f SHA1 b3ee826c2fc1d14b59f8384243be26d25297a45c SHA256 55da4d2738017b9571a8e6aca1528c087e42b9ae4cbd6f973c827ee2124c7249
+MISC ChangeLog 4748 RMD160 dc27c6fcc4ddb02312c98f6e50d88caa49ed6089 SHA1 cc7a7559d407d76c7d3c9b2b362c6644ec82e30e SHA256 99abcaab8823c830d1802f5a270bddfb2c879c9e3ff1bee2fbb787a5c4e48006
 MISC metadata.xml 305 RMD160 ed7371c406034cc84915e74b594281cc0d4973c1 SHA1 aad2ca853c4b7692f7024c019b2e83eff956152e SHA256 0da0ca1027ebd9494b46c492d94685e161f01bf4f32c2a5307ce7381e83b55eb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBAgAGBQJNiawbAAoJEEqz6FtPBkyjqVAH/0aRWuqeNMyBODnTXg3b+anW
-rNU98iCuHWg7q4yCZSOXQuHQ1PlN9Jw8AidsWtFqadLhVbU1/BIGiVQpm1vTfj4U
-BXTjZns+JFY9YLQCJgq02clm51d3v9iP6Oz2aGtOYQXV35oYU8C8A0B8mFf/U97S
-6J+1nr1YQFq1Q1sDKx+z3mV6IjdJiSpsSHg8nGC/JD+jjg4Cv0sdmKcAsOnUYfr8
-ZrZAjiCvhVyf0AbvRV60ggCsWO6ZenHEPmqJYnGufiAgw4b17mP8vzYN0Rs6n/Vd
-2faJpj/NZf0Sz8/+RlJbu9ZVM0RJH2ELdJX8yzSbEWOgNLmcB/gLmjCdt8df+kQ=
-=kSYE
+iQEcBAEBCgAGBQJOUd6FAAoJEEqz6FtPBkyja14H/1aJfQVpx+FNxV0O2mBvZxIu
+zWQPm+AmJpq3UYgK8zFMEvW6mTdBiC5HVqVIhjWRNp/E3g4NiqvnAU2Kx7/yt506
+ihYCSe5j5NU0V+EdeiUGEwueVH3APvdvk8uWWFHDYIEJRcsuJ+s3PihyB+ua7y47
+b3u+OJZF0LomL/a/JP/KwhX+StgqhWS9BSANAgEfjGb8GcAOijEW/3MAQ1uHB987
+Eeq0CCh8QQA1YjfjUnlhG6vAw292xrGmbtVVsp6EK4LOlRCTrRIcOTXlC26qT3Lq
+OdQ73FSMRN3Hzn5LYakr9yQUCCaHtKlbtd8wlwUhVvcZP1R/3hcUQa1fJUK1J/o=
+=3mrK
 -----END PGP SIGNATURE-----
