@@ -1,6 +1,11 @@
 # ChangeLog for media-video/devede
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/devede/ChangeLog,v 1.31 2011/03/23 08:15:14 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/devede/ChangeLog,v 1.32 2011/08/22 04:43:43 radhermit Exp $
+
+*devede-3.17.0 (22 Aug 2011)
+
+  22 Aug 2011; Tim Harder <radhermit@gentoo.org> +devede-3.17.0.ebuild:
+  Version bump
 
   23 Mar 2011; Tim Harder <radhermit@gentoo.org> -devede-3.12c.ebuild,
   -devede-3.13.1.ebuild, -devede-3.14.0.ebuild, -devede-3.15.2.ebuild,
